Wed Jun 01 12:12:14 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstartexpand.cc.html,docs/quickstartindex.cc.html,
	  docs/quickstartsearch.cc.html: Reinstate the old HTML versions
	  of these files.

Wed Jun 01 12:09:55 GMT 2011  Olly Betts <olly@survex.com>

	* docs/queryparser.rst,docs/remote_protocol.rst: Fix literal hard
	  spaces in input to just be spaces.

Wed Jun 01 12:06:26 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Fix sub-heading run in to previous paragraph.

Wed Jun 01 12:04:52 GMT 2011  Olly Betts <olly@survex.com>

	* docs/remote.rst: Replace out-dated list of xapian-tcpsrv's command
	  line options with a reference to --help and the man page.  Tweak
	  wording in a few places.

Wed Jun 01 11:54:37 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Change omrset to rset.  Remove some bogus `` left
	  over from fixing definition list formatting.

Wed Jun 01 11:38:09 GMT 2011  Olly Betts <olly@survex.com>

	* docs/stemming.rst: Comment out bogus claim that there are stopword
	  lists in xapian-data (the lack of stopword lists is already
	  ticket#269).

Wed Jun 01 11:29:58 GMT 2011  Olly Betts <olly@survex.com>

	* docs/matcherdesign.rst,docs/stemming.rst: Convert more arrows to
	  Unicode.
	* docs/stemming.rst: Fix some missing paragraph breaks.

Wed Jun 01 11:18:25 GMT 2011  Olly Betts <olly@survex.com>

	* docs/intro_ir.rst: Use Unicode right arrow.

Wed Jun 01 10:38:27 GMT 2011  Olly Betts <olly@survex.com>

	* docs/: Revert quickstart*.cc.html to being HTML rather than .rst as
	  the .rst version lose the syntax highlighting.  Update svn:ignore.

Wed Jun 01 10:27:11 GMT 2011  Olly Betts <olly@survex.com>

	* docs/intro_ir.rst: Sort out the remaining formatting issues.

Wed Jun 01 08:05:05 GMT 2011  Olly Betts <olly@survex.com>

	* docs/intro_ir.rst: More markup fixes.

Wed Jun 01 06:16:56 GMT 2011  Olly Betts <olly@survex.com>

	* docs/tests.rst: Use generated contents list instead of manual one.
